docs/api/qiskit/0.19/qiskit.pulse.Instruction.mdx
---
title: Instruction
description: API reference for qiskit.pulse.Instruction
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.Instruction
---

# Instruction

<Class id="qiskit.pulse.Instruction" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/pulse/instructions/instruction.py" signature="Instruction(operands, duration, channels, name=None)" modifiers="class">
  The smallest schedulable unit: a single instruction. It has a fixed duration and specified channels.

  Instruction initializer.

  **Parameters**

  *   **operands** (`Tuple`) – The argument list.
  *   **duration** (`Union`\[`Command`, `int`]) – Length of time taken by the instruction in terms of dt. Deprecated: the first argument used to be the Command.
  *   **channels** (`Tuple`\[[`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")]) – Tuple of pulse channels that this instruction operates on.
  *   **name** (`Optional`\[`str`]) – Optional display name for this instruction.

  **Raises**

  [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If duration is negative.

  ## Attributes

  <span id="instruction-channels" />

  ### channels

  <Attribute id="qiskit.pulse.Instruction.channels" attributeTypeHint="Tuple[qiskit.pulse.channels.Channel]">
    Returns channels that this schedule uses.

    **Return type**

    `Tuple`\[[`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")]
  </Attribute>

  <span id="instruction-command" />

  ### command

  <Attribute id="qiskit.pulse.Instruction.command" attributeTypeHint="qiskit.pulse.commands.command.Command">
    The associated command. Commands are deprecated, so this method will be deprecated shortly.

    **Return type**

    `Command`
  </Attribute>

  <span id="instruction-duration" />

  ### duration

  <Attribute id="qiskit.pulse.Instruction.duration" attributeTypeHint="int">
    Duration of this instruction.

    **Return type**

    `int`
  </Attribute>

  <span id="instruction-id" />

  ### id

  <Attribute id="qiskit.pulse.Instruction.id" attributeTypeHint="int">
    Unique identifier for this instruction.

    **Return type**

    `int`
  </Attribute>

  <span id="instruction-instructions" />

  ### instructions

  <Attribute id="qiskit.pulse.Instruction.instructions" attributeTypeHint="Tuple[Tuple[int, qiskit.pulse.instructions.instruction.Instruction]]">
    Iterable for getting instructions from Schedule tree.

    **Return type**

    `Tuple`\[`Tuple`\[`int`, [`Instruction`](qiskit.pulse.instructions.Instruction "qiskit.pulse.instructions.instruction.Instruction")]]
  </Attribute>

  <span id="instruction-name" />

  ### name

  <Attribute id="qiskit.pulse.Instruction.name" attributeTypeHint="str">
    Name of this instruction.

    **Return type**

    `str`
  </Attribute>

  <span id="instruction-operands" />

  ### operands

  <Attribute id="qiskit.pulse.Instruction.operands" attributeTypeHint="Tuple">
    Return instruction operands.

    **Return type**

    `Tuple`
  </Attribute>

  <span id="instruction-start-time" />

  ### start\_time

  <Attribute id="qiskit.pulse.Instruction.start_time" attributeTypeHint="int">
    Relative begin time of this instruction.

    **Return type**

    `int`
  </Attribute>

  <span id="instruction-stop-time" />

  ### stop\_time

  <Attribute id="qiskit.pulse.Instruction.stop_time" attributeTypeHint="int">
    Relative end time of this instruction.

    **Return type**

    `int`
  </Attribute>

  <span id="instruction-timeslots" />

  ### timeslots

  <Attribute id="qiskit.pulse.Instruction.timeslots" attributeTypeHint="Dict[qiskit.pulse.channels.Channel, List[Tuple[int, int]]]">
    Occupied time slots by this instruction.

    **Return type**

    `Dict`\[[`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel"), `List`\[`Tuple`\[`int`, `int`]]]
  </Attribute>

  ## Methods

  <span id="instruction-append" />

  ### append

  <Function id="qiskit.pulse.Instruction.append" signature="Instruction.append(schedule, name=None)">
    Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted at the maximum time over all channels shared between `self` and `schedule`.

    **Parameters**

    *   **schedule** (`ScheduleComponent`) – schedule to be appended
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Return type**

    [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.schedule.Schedule")
  </Function>

  <span id="instruction-ch-duration" />

  ### ch\_duration

  <Function id="qiskit.pulse.Instruction.ch_duration" signature="Instruction.ch_duration(*channels)">
    Return duration of the supplied channels in this Instruction.

    **Parameters**

    **\*channels** – Supplied channels

    **Return type**

    `int`
  </Function>

  <span id="instruction-ch-start-time" />

  ### ch\_start\_time

  <Function id="qiskit.pulse.Instruction.ch_start_time" signature="Instruction.ch_start_time(*channels)">
    Return minimum start time for supplied channels.

    **Parameters**

    **\*channels** – Supplied channels

    **Return type**

    `int`
  </Function>

  <span id="instruction-ch-stop-time" />

  ### ch\_stop\_time

  <Function id="qiskit.pulse.Instruction.ch_stop_time" signature="Instruction.ch_stop_time(*channels)">
    Return maximum start time for supplied channels.

    **Parameters**

    **\*channels** – Supplied channels

    **Return type**

    `int`
  </Function>

  <span id="instruction-draw" />

  ### draw

  <Function id="qiskit.pulse.Instruction.draw" signature="Instruction.draw(dt=1, style=None, filename=None, interp_method=None, scale=1, channels_to_plot=None, plot_all=False, plot_range=None, interactive=False, table=True, label=False, framechange=True, scaling=None, channels=None)">
    Plot the instruction.

    **Parameters**

    *   **dt** (`float`) – Time interval of samples
    *   **style** (*Optional\[*[*SchedStyle*](qiskit.visualization.pulse.qcstyle#qiskit.visualization.pulse.qcstyle.SchedStyle "qiskit.visualization.pulse.qcstyle.SchedStyle")*]*) – A style sheet to configure plot appearance
    *   **filename** (`Optional`\[`str`]) – Name required to save pulse image
    *   **interp\_method** (`Optional`\[`Callable`]) – A function for interpolation
    *   **scale** (`float`) – Relative visual scaling of waveform amplitudes
    *   **channels\_to\_plot** (`Optional`\[`List`\[[`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")]]) – Deprecated, see channels
    *   **plot\_all** (`bool`) – Plot empty channels
    *   **plot\_range** (`Optional`\[`Tuple`\[`float`]]) – A tuple of time range to plot
    *   **interactive** (`bool`) – When set true show the circuit in a new window (this depends on the matplotlib backend being used supporting this)
    *   **table** (`bool`) – Draw event table for supported instructions
    *   **label** (`bool`) – Label individual instructions
    *   **framechange** (`bool`) – Add framechange indicators
    *   **scaling** (`Optional`\[`float`]) – Deprecated, see scale
    *   **channels** (`Optional`\[`List`\[[`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")]]) – A list of channel names to plot

    **Returns**

    A matplotlib figure object of the pulse schedule

    **Return type**

    matplotlib.figure
  </Function>

  <span id="instruction-flatten" />

  ### flatten

  <Function id="qiskit.pulse.Instruction.flatten" signature="Instruction.flatten()">
    Return itself as already single instruction.

    **Return type**

    [`Instruction`](qiskit.pulse.instructions.Instruction "qiskit.pulse.instructions.instruction.Instruction")
  </Function>

  <span id="instruction-insert" />

  ### insert

  <Function id="qiskit.pulse.Instruction.insert" signature="Instruction.insert(start_time, schedule, name=None)">
    Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted within `self` at `start_time`.

    **Parameters**

    *   **start\_time** (`int`) – Time to insert the schedule schedule
    *   **schedule** (`ScheduleComponent`) – Schedule to insert
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Return type**

    [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.schedule.Schedule")
  </Function>

  <span id="instruction-shift" />

  ### shift

  <Function id="qiskit.pulse.Instruction.shift" signature="Instruction.shift(time, name=None)">
    Return a new schedule shifted forward by time.

    **Parameters**

    *   **time** (`int`) – Time to shift by
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Return type**

    [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.schedule.Schedule")
  </Function>

  <span id="instruction-union" />

  ### union

  <Function id="qiskit.pulse.Instruction.union" signature="Instruction.union(*schedules, name=None)">
    Return a new schedule which is the union of self and schedule.

    **Parameters**

    *   **\*schedules** – Schedules to be take the union with this Instruction.
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Return type**

    [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.schedule.Schedule")
  </Function>
</Class>

